rnsc/test_data/integration/error/parser/code_header/missing_stack.rns
.class MissingStack
.super java/lang/Object

.method static main ([Ljava/lang/String;)V
  .code locals 2
    return
  .code_end
.method_end
.class_end
